libtracker-common: Don’t fail statvfs() on a missing directory

If $XDG_CACHE_HOME/tracker doesn’t exist on startup, the statvfs() call
to determine how much space is left will fail with ENOENT. However, the
code currently interprets this as being out of space, and will cause the
rest of Tracker to shut down, even if there is actually plenty of space
left on the disk.

Avoid this by traversing up the directory hierarchy until statvfs() does
not fail with ENOENT.

https://bugzilla.gnome.org/show_bug.cgi?id=748907